--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -75,29 +75,7 @@
     width: 80px;
   } */
 
-  /* Modal btn style */
-  .modal-btn-container {
-    margin-top: 20px;
-  }
-  .modal-delete-btn,
-  .modal-cancel-btn {
-    background-color: #103047;
-    border-radius: 10px;
-    color: #fff;
-    padding: 8px 12px;
-    border: none;
-    outline: none;
-    font-size: 12px;
-    font-weight: 500;
-    cursor: pointer;
-  }
-  .modal-delete-btn {
-    background-color: #ff0000;
-  }
-  .delete-modal {
-    display: none;
-  }
-  .red {
+  .more-active-btn {
     fill: #fff;
     border: 2px solid #103047;
     border-radius: 30%;
@@ -166,7 +144,7 @@
             <circle cx="20" cy="20" r="2" fill="#4A4A4A" />
             <circle cx="30" cy="20" r="2" fill="#4A4A4A" />
           </svg>
-          <div class="hidden-menu">
+          <div class="hidden-menu menu">
             <ul>
               <li>
                 <a href="/reports/<%= user.id %>">
@@ -182,7 +160,7 @@
               </li>
 
               <li>
-                <a class="delete-user">
+                <a class="delete-data">
                   <input
                     class="delete-id"
                     type="hidden"
@@ -202,28 +180,10 @@
     </tbody>
   </table>
 </div>
-
 <!-- Markup for user delete modal -->
-<div id="deleteModal" class="modal-container delete-modal">
-  <div class="modal">
-    <div class="modal-head">
-      <div class="modal-title">Confirmation !!!</div>
-      <div class="modal-close">
-        <%- include("../partials/icons/close-svg"); -%>
-      </div>
-    </div>
-    <div class="modal-content">
-      <div class="container">
-        <h5>Are you sure you want to delete this?</h5>
 
-        <div class="modal-btn-container">
-          <button class="modal-cancel-btn">Cancel</button>
-          <button class="modal-delete-btn">Delete</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%- include("../partials/delete-modal.ejs"); -%>
+
 <!-- Pagination -->
 <%- include("../partials/pagination"); -%>
 
@@ -256,40 +216,63 @@
       if (!currentMenu.classList.contains("hidden-menu-show") && showMenu) {
         showMenu.classList.remove("hidden-menu-show");
       }
-      const btnActive = document.querySelector(".red");
-      if (!userActionBtn[i].classList.contains("red") && btnActive) {
-        btnActive.classList.remove("red");
+      const btnActive = document.querySelector(".more-active-btn");
+      if (
+        !userActionBtn[i].classList.contains("more-active-btn") &&
+        btnActive
+      ) {
+        btnActive.classList.remove("more-active-btn");
       }
 
       currentMenu.classList.toggle("hidden-menu-show");
-      userActionBtn[i].classList.toggle("red");
-
-  
+      userActionBtn[i].classList.toggle("more-active-btn");
+      //myFun();
     });
   }
 
-  //
-  //
-  const deleteUser = document.querySelectorAll(".delete-user");
-  const deleteModal = document.querySelector(".delete-modal");
-  const deleteId = document.querySelectorAll(".delete-id");
-  const deleteBtn = document.querySelectorAll(".modal-delete-btn");
-  const cancelBtn = document.querySelectorAll(".modal-cancel-btn");
-  for (let i = 0; i < deleteUser.length; i++) {
-    deleteUser[i].addEventListener("click", () => {
-      //alert("delete");
-      deleteModal.style.display = "block";
-      console.log(deleteId[i].value);
+  const menu = document.querySelectorAll(".menu");
+  console.log(menu);
+  function myFun() {
+    window.addEventListener("click", (e) => {
+      console.log("hello");
+      const showMenu = document.querySelector(".hidden-menu-show");
 
-      deleteBtn[0].addEventListener("click", () => {
+      menu.forEach((item) => {
+        console.log(item.classList.contains("hidden-menu-show") && showMenu);
+        // if (item.classList.contains("hidden-menu-show") == true) {
+        //   item.classList.remove("hidden-menu-show");
+        // }
+      });
+      //console.log(e.target.classList.contains("hidden-menu-show"));
+    });
+  }
+  myFun();
+  //
+  //
+
+  function deleteData(deleteUrl) {
+    const deleteData = document.querySelectorAll(".delete-data");
+    const deleteModal = document.querySelector(".delete-modal");
+    const deleteId = document.querySelectorAll(".delete-id");
+    const deleteBtn = document.querySelectorAll(".modal-delete-btn");
+    const cancelBtn = document.querySelectorAll(".modal-cancel-btn");
+    for (let i = 0; i < deleteData.length; i++) {
+      deleteData[i].addEventListener("click", () => {
+        //alert("delete");
+        deleteModal.style.display = "block";
         console.log(deleteId[i].value);
-        window.location.href = `/delete/user/${deleteId[i].value}`;
+
+        deleteBtn[0].addEventListener("click", () => {
+          console.log(deleteId[i].value);
+          window.location.href = `${deleteUrl}${deleteId[i].value}`;
+        });
+        cancelBtn[0].addEventListener("click", () => {
+          deleteModal.style.display = "none";
+        });
       });
-      cancelBtn[0].addEventListener("click", () => {
-        deleteModal.style.display = "none";
-      });
-    });
+    }
   }
+  deleteData("/delete/user/");
 </script>
 
 <script>
