--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -52,14 +52,14 @@
   }
 .an-employee-report thead {
   padding: 40px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   color: var(--deep-gray);
 }
 
 
 .an-employee-report tbody {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
   color: var(--deep2);
 }
@@ -115,6 +115,7 @@
 #an-user-report span, table thead span{
   font-size: 10px;
 }
+
 </style>
 
 
@@ -363,7 +364,10 @@
     </div>
 </div>
 
-<!-- Markup for report table  -->
+        
+        
+          <!-- Markup for report table  -->
+
 <div class="an-employee-report">
   <table>
     <thead>
@@ -378,7 +382,13 @@
 
     <tbody id="an-user-report">
 
-       
+      <% if(lastSevenDaysReports.length === 0) { %>
+        <tr>
+          
+          <td colspan="5" class="report-not-found">No, report founded !!!</td>
+          
+        </tr>
+      <% } else { %>
       <% lastSevenDaysReports.map(el => {%>
       <tr
         class="
@@ -404,7 +414,7 @@
         
       </tr>
       <% }) %>
-
+      <% } %>
       
     </tbody>
 
@@ -418,8 +428,8 @@
   </ul>
 </div>
 <% } else{ %> 
-<div class="no-report">
-  <h4 >No report found !</h4>
+<div class="report-not-found">
+  <h4 >No, report founded !!!</h4>
   <% } %>
 <script>
   
