--- a/public/user.css
+++ b/public/user.css
@@ -57,18 +57,22 @@
   font-weight: 600;
   color: var(--deep2);
 }
+.table .td-width-zero{
+  width: 0%;
+}
 .table th,
 .table td {
-  max-width: 300px;
+  width: 100%;
   min-width: 120px;
-  padding: 8px 10px;
+  padding: 12px 10px;
 }
 
+.table th:nth-child(1){
+}
 .table td .username {
   display: flex;
-  text-align: center;
+  text-transform: capitalize;
 }
-
 #role {
   color: var(--deep-gray);
   font-size: 12px;
@@ -90,5 +94,4 @@
   border: 1px solid #dfdfdf;
   box-sizing: border-box;
   border-radius: 19px;
-  margin: 10px 15px 10px 0px;
 }
