--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,6 +12,7 @@
 ;
 
 </script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="<%=baseUrl%>/js/main.js"></script>
 
 
