bug fix for update start & end time

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -27,6 +27,7 @@
     font-weight: bold;
     color: #000;
     margin: 10px 0px;
+    text-align: left;
   }
   /* .cnt-working-emy-list{
     position: relative;
@@ -62,7 +63,10 @@
     font-size: 12px;
     font-weight: 500;
     cursor: pointer;
+    display: block;
+    width: 70px;
   }
+ 
   .save-btn, .save-btn-for-end-time {
     background-color: rgb(17, 221, 17);
   }
@@ -204,7 +208,7 @@
 
 
           <td class="btn-group">
-            <button class="update-btn ">Update</button>
+            <button class="update-btn">Update</button>
             <button class="update-start-time ">Start</button>
             <button class="update-end-time ">End</button>
             <button class="save-btn">Save</button>
