--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -85,7 +85,7 @@
     <div class="oclock-box">
       <div class="time-box">
         <div class="current-time">
-          <h4 class="time">12:00</h4>
+          <h5 class="time">12:00</h5>
           <span class="time-meridiem"></span>
         </div>
         <div class="current-date">Mon 22 Oct</div>
@@ -167,6 +167,7 @@
   <div class="dashboard-info cnt-working-emy-list">
 
     <h4 class="title-for-cnt-ely">Employees Working now ! </h4>
+    <div class="scroll-table">
     <table class="table">
       <thead>
         <tr>
@@ -214,9 +215,9 @@
         </tr>
 
         <%}) %>
-
       </tbody>
     </table>
+  </div>
   </div>
   <%} %>
 
