--- a/public/user.css
+++ b/public/user.css
@@ -14,6 +14,7 @@
   font-weight: 700;
   color: var(--deep);
 }
+
 .add-btn {
   display: inline-flex;
   align-items: center;
@@ -43,6 +44,11 @@
 #users .table {
   border-collapse: collapse;
   margin: 25px 40px;
+  margin-bottom: 100px;
+}
+
+.table tbody {
+  position: relative;
 }
 .table tbody tr {
   border-bottom: 1px solid #b9b9b9;
@@ -57,18 +63,17 @@
   font-weight: 600;
   color: var(--deep2);
 }
-.table .td-width-zero{
-  width: 0%;
-}
+
 .table th,
 .table td {
-  width: 100%;
-  min-width: 120px;
   padding: 12px 10px;
 }
+.td-width{
+  width: 30%;
+  min-width: 120px;
+ }
 
-.table th:nth-child(1){
-}
+
 .table td .username {
   display: flex;
   text-transform: capitalize;
@@ -94,4 +99,81 @@
   border: 1px solid #dfdfdf;
   box-sizing: border-box;
   border-radius: 19px;
+}
+
+
+.hidden-menu {
+  overflow: hidden;
+  max-height: 0;
+  -webkit-transition: min-height 0.4s;
+  -moz-transition: min-height 0.4s;
+  transition: min-height 0.4s;
+  position: relative;
+  z-index: 1;
+}
+.hidden-menu ul li a {
+  text-decoration: none !important;
+  color: #000 !important;
+}
+
+/* .hidden-menu-show {
+  max-height: 130px;
+} */
+.hidden-menu-show {
+  position: absolute;
+  /* max-height: 110px; */
+  min-height: 110px;
+  overflow: hidden;
+  /* height: 110px; */
+
+  width: 130px;
+  padding: 6px;
+  border-radius: 15px;
+  background: #ffffff;
+  z-index: 1;
+  margin-left: -70px;
+
+  box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.13),
+    0px 6.96494px 6.11893px rgba(0, 0, 0, 0.0847066),
+    0px 2.51788px 1.42419px rgba(0, 0, 0, 0.065),
+    0px 0.750053px 0.0354451px rgba(0, 0, 0, 0.0452935);
+}
+
+.hidden-menu-show li {
+  position: relative;
+  height: 20px;
+  margin: 0 5px;
+  list-style: none;
+  line-height: 20px;
+  cursor: pointer;
+}
+
+.hidden-menu-show li a svg {
+  /* width: 32px;
+height: 32px; */
+  margin: 0 20px;
+}
+.hidden-menu-show li a {
+  color: var(--deep2);
+  stroke: var(--deep2);
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 8px 0px 15px 0px;
+  padding: 5px 0;
+}
+.hidden-menu-show li a:hover {
+  background-color: #f6f6f6;
+  border-radius: 9px;
+}
+/* #users table tr td:last-child {
+  width: 80px;
+} */
+
+.more-active-btn {
+  fill: #fff;
+  border: 2px solid #103047;
+  border-radius: 30%;
 }
