--- a/public/options.css
+++ b/public/options.css
@@ -129,3 +129,54 @@
   flex-direction: row;
   gap: 5px;
 }
+.project-table input[type="text"] {
+  outline: none !important;
+  border-radius: 10px;
+}
+.project-table input[type="text"]:focus {
+  outline: none;
+  border: none;
+}
+.option-value {
+  border: none;
+  background-color: transparent;
+  padding: 6px;
+  outline: none;
+}
+.option-value-focus:focus {
+  color: red;
+  outline: none;
+}
+
+.bottom-border {
+  color: red;
+  outline: none;
+}
+.opt-val-change-btn,
+.opt-val-save-btn {
+  background-color: #103047;
+  border-radius: 10px;
+  color: #fff;
+  padding: 8px 12px;
+  border: none;
+  outline: none;
+  font-size: 12px;
+  font-weight: 500;
+  cursor: pointer;
+  width: 100%;
+}
+.opt-val-save-btn {
+  background-color: rgb(17, 221, 17);
+  display: none;
+}
+.green {
+  background-color: rgb(17, 221, 17);
+}
+
+/* leaveday table */
+
+.table .leaveday-table .td-width{
+  width: 30%;
+  min-width: 120px;
+ }
+
